<resources>
    <string name="app_name">Flextime</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_shift">Keine Schicht</string>
    <string name="shift_start">Begin</string>
    <string name="shift_end">Ende</string>
    <string name="shift_pause">Pause</string>
    <string name="shift_duration">Dauer</string>
    <string name="tag_name">Name</string>
    <string name="tag_mode">Modus</string>
    <string name="tag_mode_manual">Manuell</string>
    <string name="tag_mode_semiauto">Semiauto</string>
    <string name="tag_mode_auto">Auto</string>
    <string name="tag_auto_pause">Automatische Pause</string>
    <string name="tag_activated">Aktiviert</string>
    <string name="tag_duration">Dauer</string>
    <string name="tag_geofencing">Geofencing</string>
    <string name="tag_latitude">Breitengrad</string>
    <string name="tag_longitude">Längengrad</string>
    <string name="tag_wifis">Wifis</string>
    <string name="setting_startvalues">Startwerte</string>
    <string name="setting_startOvertime">Vorhandene Überstunden</string>
    <string name="setting_sartVacationDays">Vorhandene Urlaubstage</string>
    <string name="setting_workingHours">Arbeitsstunden</string>
    <string name="day_monday">Montag</string>
    <string name="setting_workday">Arbeitstag</string>
    <string name="day_tuesday">Dienstag</string>
    <string name="day_wednesday">Mittwoch</string>
    <string name="day_thursday">Donnerstag</string>
    <string name="day_friday">Freitag</string>
    <string name="day_saturday">Samstag</string>
    <string name="day_sunday">Sonntag</string>
    <string name="event_filter">Filter</string>
    <string name="drawer_tags">Tags</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_settings">Einstellung</string>
    <string name="drawer_backup">Backup</string>
    <string name="drawer_restore">Restore</string>
    <string name="drawer_log">Log</string>
    <string name="drawer_other">Verschiedenes</string>
    <string name="drawer_data">Daten</string>
    <string name="tag_trackmode_manual">Hybrid</string>
    <string name="tag_trackmode_semiauto">Wifi</string>
    <string name="tag_trackmode_auto">Geofencing</string>
    <string name="track_mode">Lokalisierungsart</string>
    <string name="delete_entries">Einträge löschen</string>
    <string name="restore">Wiederherstellen</string>
    <string name="delete">Löschen</string>
    <string name="drawer_month">Monat</string>
    <string name="drawer_year">Jahr</string>
    <string name="drawer_overview">Zusammenfassung</string>
</resources>
