<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_year"
            android:title="@string/drawer_overview"
            android:icon="@drawable/calendar_range_outline"/>
        <item
            android:id="@+id/nav_tags"
            android:title="@string/drawer_tags"
            android:icon="@drawable/tag_multiple"/>
        <item
            android:id="@+id/nav_events"
            android:title="@string/drawer_events"
            android:icon="@drawable/crosshairs_gps"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/drawer_settings"
            android:icon="@drawable/settings"/>
    </group>
    <item android:title="@string/drawer_data">
        <menu>
            <item
                android:id="@+id/nav_backups"
                android:title="@string/drawer_backup"
                android:icon="@drawable/database"/>
            <item
                android:id="@+id/nav_deleteEntries"
                android:title="@string/delete_entries"
                android:icon="@drawable/delete_forever_outline"/>
        </menu>
    </item>
    <item android:title="@string/drawer_other">
        <menu>
            <item
                android:id="@+id/nav_logfile"
                android:title="@string/drawer_log"
                android:icon="@drawable/text_box_search_outline"/>
        </menu>
    </item>
</menu>
