<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <EditText
                android:id="@+id/txt_tagName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/tag_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_mode"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radGrp_mode"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rad_manual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_mode_manual"
                    android:textAlignment="gravity" />

                <RadioButton
                    android:id="@+id/rad_semiauto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_mode_semiauto" />

                <RadioButton
                    android:id="@+id/rad_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_mode_auto" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_mode"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radGrp_trackmode"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rad_trackhybrid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_trackmode_manual"
                    android:textAlignment="gravity" />

                <RadioButton
                    android:id="@+id/rad_trackwifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_trackmode_semiauto" />

                <RadioButton
                    android:id="@+id/rad_trackgeo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag_trackmode_auto" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_auto_pause"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/tag_activated"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/swt_autoPause"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/tag_duration"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_autoPauseDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="right"
                        android:inputType="number"
                        tools:text="30 min" />

                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_geofencing"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/tag_latitude"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_geoLatitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="right"
                        android:inputType="numberDecimal"
                        tools:text="0" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/tag_longitude"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txt_geoLongitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="right"
                        android:inputType="numberDecimal"
                        tools:text="0.0" />

                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_wifis"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recy_wifis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:itemCount="5"
                tools:listitem="@layout/item_select" />
        </LinearLayout>
</androidx.core.widget.NestedScrollView>