<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_startvalues"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/setting_startOvertime"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_startOvertime"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="0.0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/setting_sartVacationDays"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_startVacationDays"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:ems="10"
                android:gravity="right"
                android:inputType="number"
                tools:text="0" />

        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_workingHours"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_monday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:checked="true"
                android:drawablePadding="3dp"
                android:paddingEnd="16dp"
                android:switchPadding="8dp"
                android:text="@string/setting_workday" />


            <EditText
                android:id="@+id/txt_hoursMonday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="8.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_tuesday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:checked="true"
                android:paddingEnd="16dp"
                android:text="@string/setting_workday" />

            <EditText
                android:id="@+id/txt_hoursTuesday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="8.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_wednesday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:checked="true"
                android:paddingEnd="16dp"
                android:text="@string/setting_workday" />

            <EditText
                android:id="@+id/txt_hoursWednesday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="8.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_thursday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:checked="true"
                android:paddingEnd="16dp"
                android:text="@string/setting_workday" />

            <EditText
                android:id="@+id/txt_hoursThursday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="8.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_friday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:checked="true"
                android:paddingEnd="16dp"
                android:text="@string/setting_workday" />

            <EditText
                android:id="@+id/txt_hoursFriday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="8.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_saturday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:paddingEnd="16dp"
                android:text="@string/setting_workday" />

            <EditText
                android:id="@+id/txt_hoursSaturday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:enabled="false"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="0.0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/day_sunday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/swt_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:paddingEnd="16dp"
                android:text="@string/setting_workday" />

            <EditText
                android:id="@+id/txt_hoursSunday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:ems="10"
                android:enabled="false"
                android:gravity="right"
                android:inputType="numberDecimal"
                tools:text="0.0" />
        </TableRow>
    </TableLayout>


</LinearLayout>